@@ -1,3 +1,10 @@
+2004-12-16  Sushma Rai <rsushma@novell.com>
+
+	* calendar/e-cal-backend-exchange-calendar.c : Fixed some memory leaks. 
+	* calendar/e-cal-backend-exchange.c: ditto
+	* storage/exchange-hierarchy-foreign.c: ditto
+	* storage/exchange-hierarchy-webdav.c: ditto
+
 2004-12-15  Rodrigo Moya <rodrigo@novell.com>
 
 	* addressbook/e-book-backend-exchange.c: use libedataserver's e-sexp.h.
